css/converse.css
/*!
 * Converse.js (Web-based XMPP instant messaging client)
 * http://conversejs.org
 *
 * Copyright (c) 2012-2014, JC Brand <jc@opkode.com>
 * Licensed under the Mozilla Public License
 */
@font-face {
  font-family: 'Converse-js';
  src: url("../fonticons/fonts/icomoon.eot?-mnoxh0");
  src: url("../fonticons/fonts/icomoon.eot?#iefix-mnoxh0") format("embedded-opentype"), url("../fonticons/fonts/icomoon.woff?-mnoxh0") format("woff"), url("../fonticons/fonts/icomoon.ttf?-mnoxh0") format("truetype"), url("../fonticons/fonts/icomoon.svg?-mnoxh0#icomoon") format("svg");
  font-weight: normal;
  font-style: normal; }
.icon-conversejs {
  font-family: 'Converse-js';
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale; }

.icon-conversejs:before {
  content: "\e600"; }

#conversejs {
  color: #6C4C44;
  font-size: 14px;
  bottom: 0;
  direction: ltr;
  height: 35px;
  left: 0;
  position: fixed;
  right: 0;
  z-index: 30;
  display: block;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  /* @group Tabs */
  /* status dropdown styles */ }
  #conversejs ::selection {
    background-color: #E3C9C1; }
  #conversejs ::-moz-selection {
    background-color: #E3C9C1; }
  #conversejs *, #conversejs *:before, #conversejs *:after {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box; }
  @media screen and (max-width: 480px) {
    #conversejs {
      margin: 5px 10px; } }
  #conversejs a, #conversejs a:visited {
    text-decoration: none;
    color: #436F64;
    text-shadow: none; }
  #conversejs ul li {
    height: auto; }
  #conversejs div, #conversejs span, #conversejs h1, #conversejs h2, #conversejs h3, #conversejs h4, #conversejs h5, #conversejs h6, #conversejs p, #conversejs blockquote,
  #conversejs pre, #conversejs a, #conversejs em, #conversejs img, #conversejs strong, #conversejs dl, #conversejs dt, #conversejs dd, #conversejs ol, #conversejs ul, #conversejs li,
  #conversejs fieldset, #conversejs form, #conversejs label, #conversejs legend, #conversejs table, #conversejs caption, #conversejs tbody,
  #conversejs tfoot, #conversejs thead, #conversejs tr, #conversejs th, #conversejs td, #conversejs article, #conversejs aside, #conversejs canvas, #conversejs details,
  #conversejs embed, #conversejs figure, #conversejs figcaption, #conversejs footer, #conversejs header, #conversejs hgroup, #conversejs menu,
  #conversejs nav, #conversejs output, #conversejs ruby, #conversejs section, #conversejs summary, #conversejs time, #conversejs mark, #conversejs audio, #conversejs video {
    margin: 0;
    padding: 0;
    border: 0;
    font: inherit;
    vertical-align: baseline; }
  #conversejs textarea,
  #conversejs input[type=submit], #conversejs input[type=button],
  #conversejs input[type=text], #conversejs input[type=password],
  #conversejs button {
    font-size: 14px;
    padding: 0.25em;
    min-height: 0; }
  #conversejs input[type=text] {
    height: 26px; }
  #conversejs strong {
    font-weight: 700; }
  #conversejs ol, #conversejs ul {
    list-style: none; }
  #conversejs li {
    height: 10px; }
  #conversejs ul, #conversejs ol, #conversejs dl {
    font: inherit;
    margin: 0; }
  #conversejs [data-icon]:before {
    content: attr(data-icon);
    font-family: 'Converse-js';
    font-variant: normal;
    font-weight: normal;
    line-height: 1;
    speak: none;
    text-transform: none;
    /* Better Font Rendering =========== */
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale; }
  #conversejs [class^="icon-"], #conversejs [class*=" icon-"] {
    background-position: 14px 14px;
    background-image: none;
    font-family: 'Converse-js';
    font-style: normal;
    font-variant: normal;
    font-weight: normal;
    width: auto;
    height: auto;
    line-height: 1;
    speak: none;
    text-transform: none;
    /* Better Font Rendering =========== */
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale; }
  #conversejs .icon-address-book:before {
    content: "\270f"; }
  #conversejs .icon-angry:before {
    content: "\e03f"; }
  #conversejs .icon-attachment:before {
    content: "\e032"; }
  #conversejs .icon-away:before {
    content: "\25fb"; }
  #conversejs .icon-blocked:before {
    content: "\2718"; }
  #conversejs .icon-bold:before {
    content: "\e04d"; }
  #conversejs .icon-bubbles-2:before {
    content: "\e016"; }
  #conversejs .icon-bubbles-3:before {
    content: "\e017"; }
  #conversejs .icon-bubbles:before {
    content: "\e015"; }
  #conversejs .icon-camera-2:before {
    content: "\2616"; }
  #conversejs .icon-camera:before {
    content: "\e003"; }
  #conversejs .icon-cancel-circle:before {
    content: "\e058"; }
  #conversejs .icon-checkbox-checked:before {
    content: "\2611"; }
  #conversejs .icon-checkbox-partial:before {
    content: "\2b28"; }
  #conversejs .icon-checkbox-unchecked:before {
    content: "\2b27"; }
  #conversejs .icon-checkmark:before {
    content: "\2713"; }
  #conversejs .icon-close:before {
    content: "\2715"; }
  #conversejs .icon-closed:before {
    content: "\25ba"; }
  #conversejs .icon-cog:before {
    content: "\e02f"; }
  #conversejs .icon-cogs:before {
    content: "\e022"; }
  #conversejs .icon-confused:before {
    content: "\2368"; }
  #conversejs .icon-cool:before {
    content: "\e040"; }
  #conversejs .icon-dnd:before {
    content: "\e004"; }
  #conversejs .icon-envelop:before {
    content: "\2709"; }
  #conversejs .icon-evil:before {
    content: "\261f"; }
  #conversejs .icon-eye-blocked:before {
    content: "\e031"; }
  #conversejs .icon-eye:before {
    content: "\e030"; }
  #conversejs .icon-globe:before {
    content: "\e033"; }
/* ... */

